--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1551,7 +1551,7 @@
 /* Basic */
 
 	body {
-		background: #595959;
+		background: #4d4d4d;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
