--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2479,9 +2479,9 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #1f1815;
+		background-color: #4d4d4d;
 		background-attachment: scroll,								fixed;
-		background-image: url("images/overlay.png"), url("../../images/sidebar.jpg");
+		background-image: url("../../images/sidebar.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto 100%;
