--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,9 +2481,9 @@
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								fixed;
-		background-image: url("../../images/sidebar.jpg");
+		background-image: url("images/overlay2.png"), url("../../images/sidebar.jpg");
 		background-position: top left,							top left;
-		background-repeat: no-repeat;
+		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto 100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
