--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2479,7 +2479,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #1f1815;
+		background-color: #4d4d4d;
 		background-attachment: scroll,								fixed;
 		background-image: url("images/overlay2.png"), url("../../images/sidebar.jpg");
 		background-position: top left,							top left;
